More fixes, insights and individual insights fixed, new scrollbar, css changes, more tailwind conversion.

--- a/src/app.css
+++ b/src/app.css
@@ -23,7 +23,8 @@ html {
 	--text-4xs: 0.8rem;
 	--text-5xs: 0.7rem;
 
-
+	/* Colors */
+	--color-primary: rgb(3, 24, 3);
 }
 
 body {
@@ -34,19 +35,15 @@ body {
 	@apply flex max-w-fit flex-col justify-center items-center w-full m-auto h-full;
 }
 .main-content {
-	@apply mt-[15rem] mb-32 min-h-[60vh] flex flex-col justify-start items-center w-[72vw] py-10 px-8;
-}
-
-.highlighted {
-	@apply bg-white text-black py-0 px-6 border-0 font-bold uppercase mix-blend-lighten w-fit text-lg;
+	@apply mt-[15rem] mb-32 min-h-[60vh] flex flex-col justify-start items-center min-w-[72vw] py-10 px-8;
 }
 
 h1 {
-	@apply m-0 text-xxxl tracking-[0.4rem];
+	@apply m-0 text-l md:text-lg lg:text-xxxl tracking-[0.4rem];
 }
 
 h2 {
-	@apply m-0 text-lg;
+	@apply m-0 text-l md:text-lg;
 }
 
 h3 {
@@ -62,7 +59,7 @@ nav {
 }
 
 nav a {
-	@apply mx-8 p-4 transition-all duration-400 md:text-md;
+	@apply p-4 transition-all duration-400 text-ml md:mx-8 md:text-md;
 }
 
 nav a:hover {
@@ -85,59 +82,41 @@ button:hover {
 	@apply cursor-pointer bg-white text-[rgb(3,24,3)];
 }
 
-/* Responsive styles */
-/* @media (max-width: 1200px) {
-	.main-content {
-		width: 95vw;
-		margin: 15rem 0 5rem 0;
-	}
-	nav a {
-		font-size: var(--fs-sm);
-	}
+/* Repeating Styles */
+.font-variation {
+	font-family: 'podium-sharp-variable', sans-serif;
+	font-variation-settings:
+		'wght' 700,
+		'wdth' 50;
 }
 
-@media (max-width: 900px) {
-	.main-content {
-		margin: 15rem 0 3rem 0;
-		width: 99vw;
-	}
-	nav a {
-		margin: 0 1rem;
-	}
+/* Insights */
+.author {
+	@apply text-left !text-ml !text-black sm:mr-8 !my-2 md:!my-4;
+}
+.date {
+	@apply m-0 text-left !text-ml !text-black;
 }
 
-@media (max-width: 600px) {
-	html {
-		font-size: 60%;
-	}
-	.container {
-		min-height: unset;
-		padding: 0 0.5rem;
-	}
-	.main-content {
-		margin: 20rem 0 1rem 0;
-		width: 100vw;
-		min-height: unset;
-	}
-	nav {
-		flex-direction: column;
-		align-items: flex-start;
-	}
-	nav a {
-		margin: 0.5rem 0;
-		font-size: var(--fs-md);
-		padding: 0.4em 0.4em;
-	}
+/* ===== Main Scrollbar ===== */
+
+/* (Chrome, Safari, Edge, etc.) */
+::-webkit-scrollbar {
+	width: 12px;
+	height: 12px;
 }
 
-@media (max-width: 400px) {
-	html {
-		font-size: 40%;
-	}
-	.main-content {
-		margin: 25rem 0 0.5rem 0;
-	}
-	nav a {
-		padding: 0.2em 0.2em;
-	}
-} */
+::-webkit-scrollbar-track {
+	background-color: rgb(3 24 3);
+	border: 2px solid black;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #a7a6a7;
+
+	border: 2px solid black;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background-color: #a7a6a7c9;
+}
